--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ apply plugin: 'org.greenrobot.greendao' // apply plugin
 //apply plugin: 'com.bugsnag.android.gradle' // apply on last line
 apply plugin: 'bugly'
 android {
+    signingConfigs {
+        release {
+            storeFile file('../app.jks')
+            storePassword '123456'
+            keyAlias 'key'
+            keyPassword '123456'
+        }
+    }
     compileSdkVersion parent.ext.compileSdkVersion
     buildToolsVersion parent.ext.buildToolsVersion
     defaultConfig {
@@ -18,6 +26,7 @@ android {
             // 设置支持的SO库架构
             abiFilters 'armeabi', 'x86', 'armeabi-v7a'//, 'x86_64', 'arm64-v8a'
         }
+        signingConfig signingConfigs.release
     }
     buildTypes {
         debug {
@@ -70,7 +79,7 @@ dependencies {
     implementation "com.android.support:cardview-v7:$supportLibraryVersion"
     implementation "com.android.support:support-vector-drawable:$supportLibraryVersion"
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -142,7 +151,7 @@ dependencies {
         exclude group: 'com.android.support'
     }
     implementation project(':exolibrary')
-    implementation 'com.tencent.bugly:crashreport:2.8.6'
-    implementation 'com.tencent.bugly:nativecrashreport:3.6.0'
+    implementation 'com.tencent.bugly:crashreport:3.1.0'
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
     implementation "ru.noties:markwon:$rootProject.markwonVersion"
 }
