--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    packagingOptions {
+        exclude 'META-INF/versions/9'
+    }
 }
 
 greendao {
@@ -154,4 +157,5 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport:3.1.0'
     implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
     implementation "ru.noties:markwon:$rootProject.markwonVersion"
+    implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
 }
