--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,12 +99,14 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
     // code generator for view
     implementation "com.jakewharton:butterknife:$butterKnifeVersion"
+    androidTestImplementation 'junit:junit:4.12'
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.12'
     // Plain MVP'
     implementation 'com.hannesdorfmann.mosby3:viewstate:3.1.1'
@@ -141,13 +143,13 @@ dependencies {
     implementation('com.github.bumptech.glide:glide:4.11.0') {
         exclude group: "com.android.support"
     }
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.2.0'
-    implementation 'me.jessyan:retrofit-url-manager:1.2.0'
+    implementation 'me.jessyan:retrofit-url-manager:1.4.0'
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'com.oushangfeng:PinnedSectionItemDecoration:1.3.2'
     implementation 'cn.pedant.safewebviewbridge:library:1.4'
+
     // Dagger2 dependencies
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
     implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
@@ -163,4 +165,6 @@ dependencies {
     implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
     implementation "ru.noties:markwon:$rootProject.markwonVersion"
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+
+    implementation 'net.sourceforge.htmlunit:htmlunit:2.4'
 }
