--- a/exolibrary/build.gradle
+++ b/exolibrary/build.gradle
@@ -17,7 +17,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         signingConfig signingConfigs.release
     }
@@ -31,6 +31,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     api 'com.devbrackets.android:exomedia:4.3.0'
 }
